Fix shifted part borders
Resolves #40

--- a/app/client/components/sound-player.less
+++ b/app/client/components/sound-player.less
@@ -31,10 +31,11 @@ av-sound-player {
 }
 
 .SoundPlayer-progressGridPart {
+  margin-left: -1px;
   border-left: 1px @sound-player-border-color solid;
-  display: block;
 
   &:first-child {
+    margin-left: 0;
     border-left: none;
   }
 }
